# drivewise-launch-monitor

./: .gitignore  .sticker_coords.json.swp  LICENSE  README.md  annotate_video.py  auto_capture.py  ball_coords.json  ball_coords.txt  ball_coords__out1.json  ball_coords__out2.json  ball_coords_black.json  battery.py  ble.cpp  ble.py  ble_main.py  convert_to_tflite.py  curve_path.json  debug_frame_gray.npy  debugpy_launcher.py  go.mod  golf_ball_detector.go  golf_ball_detector.py  golf_ball_detector_int8.tflite  image_ball_locator.py  metric_calculation.py  metric_output.py  mirror_noah_hugo_videos.py  pyproject.toml  requirements.txt  stationary_sticker.json  sticker_coords.json  sticker_coords__out1.json  sticker_coords__out2.json  sticker_coords_black.json  test.py  test_led_yellow.py  test_plot_z_vs_time.py  video.264  video_ball_detector.py
.yolo/: persistent_cache.json  settings.json
calibration/: calibration.py  camera_calib.npz  crop_calibration.py  example_usage.py
docs/: api.md  architecture.md  setup.md
embedded/: GS_config.sh  GScrop  GScrop.cpp  GScrop.sh  GScrop_20250918.sh  GScrop_flip.sh  GScrop_improved.sh  GScrop_improved_flip.sh  GScrop_no_recording.sh  auto_exposure.py  calibrate_exposure.py  capture_still.cpp  check_fps.py  compute_histogram_values.cpp  crop_calibration.py  exposure_calibration.py  exposure_testing.sh  histogram.py  hough_circle.py  image_ball_locator.py  media_config.sh  media_config_with_shutter.sh  record_test_vid.sh  rpicam_run.sh  save_vid.cpp  segment.sh  simple_cam.cpp  tutorial.cpp  tutorial_with_ffmpeg.cpp  (+1 more)
(+35 files in other folders)
